--- a/Calendar/pom.xml
+++ b/Calendar/pom.xml
@@ -2,6 +2,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+      <groupId>example</groupId>
+      <artifactId>example.parent</artifactId> 
+      <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  <artifactId>example.plugin1.tests</artifactId>
+  <packaging>eclipse-test-plugin</packaging>
+ 
   <groupId>calendar</groupId>
   <artifactId>Calendar</artifactId>
   <version>1.0-SNAPSHOT</version>
